fixed mobile view module cutting off

--- a/public/index.css
+++ b/public/index.css
@@ -398,6 +398,7 @@ main.loading {
 @media screen and (max-width: 768px){
     .module {
         height: 100vh;
+        height: -webkit-fill-available;
         width: 100%;
     }
 
